[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitbucket-pr-manager-mcp"
version = "0.1.0"
description = "MCP server for Bitbucket PR management"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.26.0",
    "requests>=2.32.5",
    "pydantic>=2.12.5",
]

[project.scripts]
bitbucket-pr-manager-mcp = "src.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-responses>=0.5.0",
    "responses>=0.26.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -p no:logging"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
